# secure-vault

./: .gitignore  Cargo.toml  README.md
.github/workflows/: flatpak-release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.css  App.tsx  index.css  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: EntryDetail.tsx  EntryList.tsx  MainLayout.tsx  PasswordGenerator.tsx  Settings.tsx  Sidebar.tsx  UnlockScreen.tsx
docs/: architecture.md  security_design.md  threat_model.md
flatpak/: build-flatpak.sh  com.securevault.desktop.desktop  com.securevault.desktop.json
security/: Cargo.toml
security/src/: crypto.rs  encryption.rs  kdf.rs  lib.rs
storage/: Cargo.toml
storage/src/: lib.rs  models.rs  serializer.rs  vault_file.rs
utils/: Cargo.toml
utils/src/: lib.rs  password_generator.rs
vault_core/: Cargo.toml
vault_core/src/: api.rs  lib.rs  services.rs
