[package]
name = "storage"
version.workspace = true
edition.workspace = true

[dependencies]
security = { path = "../security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
zeroize = "1"
