[package]
name = "app"
version = "0.1.0"
description = "Secure Vault - A local zero-knowledge password manager"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
vault_core = { path = "../../../vault_core" }
security = { path = "../../../security" }
storage = { path = "../../../storage" }
utils = { path = "../../../utils" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
